Target Explorer: Moving URL parsing from FSTreeNode to TcfURLStreamHandlerService, adding more URL/URI tests.